--- a/manifest.json
+++ b/manifest.json
@@ -2,5 +2,7 @@
   "name": "Fake News Recognizer",
   "description": "Test",
   "version": "1.0",
-  "manifest_version": 3
+  "manifest_version": 3,
+  "content_scripts": [
+  ]
 }
