--- a/src/manifest.json
+++ b/src/manifest.json
@@ -1,14 +1,12 @@
 {
-  "name": "That's Fake!",
+  "name": "that's fake!",
   "version": "1.0",
-  "description": "Is that fake news?",
-  "permissions": ["activeTab", "declarativeContent", "storage"],
-  "options_page": "options.html",
+  "description": "is that fake news?",
+  "permissions": ["activeTab"],
   "background": {
-    "scripts": ["background.js"],
-    "persistent": false
+    "service_worker": "background.js"
   },
-  "page_action": {
+  "action": {
     "default_popup": "popup.html",
     "default_icon": {
       "16": "images/get_started16.png",
@@ -23,5 +21,5 @@
     "48": "images/get_started48.png",
     "128": "images/get_started128.png"
   },
-  "manifest_version": 2
+  "manifest_version": 3
 }
