--- a/src - V/manifest.json
+++ b/src - V/manifest.json
@@ -1,10 +1,12 @@
 {
   "name": "that's fake!",
-  "version": "1.0",
-  "description": "is that fake news?",
-  "permissions": ["activeTab"],
+  "version": "2.0",
+  "description": "is that fake news? V",
+  "manifest_version": 3,
+  "action": {
+  },
+  "permissions": ["activeTab", "scripting"],
   "background": {
     "service_worker": "background.js"
-  },
-  "manifest_version": 3
+  }
 }
