--- a/src - V/manifest.json
+++ b/src - V/manifest.json
@@ -3,7 +3,9 @@
   "version": "2.0",
   "description": "is that fake news? V",
   "manifest_version": 3,
-  "action": {},
+  "action": {
+    "default_popup": "popup.html"
+  },
   "permissions": ["activeTab", "scripting"],
   "background": {
     "service_worker": "background.js"
