--- a/src - V/manifest.json
+++ b/src - V/manifest.json
@@ -4,7 +4,19 @@
   "description": "is that fake news? V",
   "manifest_version": 3,
   "action": {
-    "default_popup": "popup.html"
+    "default_popup": "popup.html",
+    "default_icon": {
+      "16": "images/TFN16.png",
+      "32": "images/TFN32.png",
+      "48": "images/TFN48.png",
+      "128": "images/TFN128.png"
+    }
+  },
+  "icons": {
+    "16": "images/TFN16.png",
+    "32": "images/TFN32.png",
+    "48": "images/TFN48.png",
+    "128": "images/TFN128.png"
   },
   "permissions": ["activeTab", "scripting"]
 }
